# notes-on-c

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  makefile  readme.md
content/pointer/: function.c
content/type/: enum.c  struct.c
docs/: abstraction.md  bitwise.md  dynamic-memory.md  encapsulation.md  error-handling.md  function-pointer.md  headers.md  inheritance.md  macro.md  memory-issuess.md  memory.md  oop.md  operator-precedence.md  pointer-reference.md  polymorphism.md  recursion.md  tips-tricks.md
docs/memory/: dynamic.md  memory.md
program/endianness/: main.c
program/greet/: main.c
program/http-socket-time-server/: main.c
program/list-network-adapters/: main.c
program/quotes/: main.c  quotes.txt
src/data-structures/: binary-search-tree.c  binary-search-tree.h  linked-list.c  linked-list.h  queue.c  queue.h  singly-linked-list.c  singly-linked-list.h  stack-array-dynamic.c  stack-array-fixed.c  stack-list.c  stack.h
src/dynamic-memory/: person.c  person.h
src/memory/dynamic/: person.c
src/oop/abstraction/: circle.c  circle.h  rectangle.c  rectangle.h  shape.c  shape.h
src/oop/inheritance/: circle.c  circle.h  rectangle.c  rectangle.h  shape.c  shape.h
